src/components/Navbar/Navbar.css
nav{
    width: 100%;
    height: 8rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 2rem;
    position: fixed;
    top:0;
}

ul{
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2rem;
    list-style: none;
    font-size: 1.8rem;
    color: white;
}
nav ul a{
    cursor: pointer;
}
nav ul a:hover{
     color: rgb(177, 177, 247);
    border-bottom: 2px solid rgb(177, 177, 247);
}

nav h1{
    font-size: 3rem;
    background: linear-gradient(to right, rgb(2, 127, 152), white);
    background-clip: text;
    color: transparent;
}

.hamburger{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: .6rem;
    display: none;

}

.ham{
    width: 2rem;
    height: .2rem;
    background-color: white;
    transition: all .5s;
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    -ms-transition: all .5s;
    -o-transition: all .5s;
}
.active-ham .ham:nth-child(1){
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    -o-transform: rotate(45deg);
    position: relative;
    top: 1rem;
}
.active-ham .ham:nth-child(2){
    opacity: 0;
}
.active-ham .ham:nth-child(3){
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
    -moz-transform: rotate(-45deg);
    -ms-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
    position: relative;
    top: -.5rem;
}

.mobile-menu{
    position: absolute;
    top: 8rem;
    right: 0;
    width: 100%;
    height: 100vh;
    background-color: rgba(27, 26, 26, 0.4);
    backdrop-filter: blur(.7rem);
    transform: translateX(100%);
    -webkit-transform: translateX(100%);
    -moz-transform: translateX(100%);
    -ms-transform: translateX(100%);
    -o-transform: translateX(100%);
    color: rgb(4, 147, 224);
    display: flex;
    flex-direction: column;
    gap: 4rem;
    transition: all .5s;
    -webkit-transition: all .5s;
    -moz-transition: all .5s;
    -ms-transition: all .5s;
    -o-transition: all .5s;


}

.active-mobile{
    transform: translateX(0%);
    -webkit-transform: translateX(0%);
    -moz-transform: translateX(0%);
    -ms-transform: translateX(0%);
    -o-transform: translateX(0%);
}


@media(max-width:750px){
    .desktop-menu{
        display: none;
    }
    .hamburger{
        display: flex;
    }
}

